@@ -9,10 +9,11 @@ use version; our $VERSION = qv( sprintf '0.10.%d', q$Rev$ =~ /\d+/gmx );
 use Moose::Role;
 use Class::MOP;
 use File::Spec;
-use List::Util qw(first);
+use List::Util        qw(first);
 use Try::Tiny;
 use File::DataClass::Constants;
 use File::DataClass::IO ();
+use Hash::Merge       qw(merge);
 
 sub basename {
    my ($self, $path, @suffixes) = @_;
@@ -67,6 +68,18 @@ sub is_stale {
           ? TRUE : FALSE;
 }
 
+sub merge_hash_data {
+   my ($self, $existing, $new) = @_;
+
+   for (keys %{ $new }) {
+      $existing->{ $_ } = exists $existing->{ $_ }
+                        ? merge( $existing->{ $_ }, $new->{ $_ } )
+                        : $new->{ $_ };
+   }
+
+   return;
+}
+
 sub throw {
    my $self = shift; EXCEPTION_CLASS->throw( @_ ); return; # Not reached
 }
@@ -118,6 +131,12 @@ File::DataClass::Util - Moose Role defining utility methods
 Returns true if there is no data or the cache mtime is older than the
 path mtime
 
+=head2 merge_hash_data
+
+   $self->merge_hash_data( $existsing, $new );
+
+Uses L<Hash::Merge> to merge data from the new hash ref in with the existsing
+
 =head2 throw
 
 =head1 Configuration and Environment
@@ -135,6 +154,8 @@ None
 =item L<Class::MOP>
 
 =item L<File::DataClass::IO>
+
+=item L<Hash::Merge>
 
 =item L<List::Util>
 
